--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="about">
         <h1>About Me</h1>
         <p>Hi there , my name is Youssef Hamouda</p>
-        <img src="/img/Capture logo.PNG" alt="png">
+        <img src="./img/Capture logo.PNG" alt="png">
         <section id="projects">
         <h1>My Projects</h1>
         
